<resources>
    <string name="appname">Beauty Porter</string>
    <string name="app_name">Beauty Porter</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="BookAppointment">Book Appointment</string>

    <string name="BeautyPorter">BEAUTY PORTER</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="appointment">Appointment</string>
    <string name="todays_offer">TODAYS OFFER</string>


    <string name="CodeToast">Code copyed</string>
    <string name="Cancel">Cancel</string>
    <string name="feedback">FEEDBACK</string>
    <string name="about_us">ABOUT US</string>
    <string name="offer">Offer</string>
    <string name="services">Services</string>
    <string name="hours">Hours</string>
    <string name="map">Map</string>
    <string name="setting">SETTINGS</string>
    <string name="join_as_vendor">JOIN AS VENDOR</string>
    <string name="create">CREATE</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="user_name_email">User Name/Email</string>
    <string name="createSmall">Create</string>
    <string name="new_account">New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_email">Your Email</string>
    <string name="loginsmall">Login</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="send">SEND</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="no_data">No Data</string>
    <string name="book_for_guest">Book For Guest</string>
    <string name="enter_name">Enter Name</string>
    <string name="pick_a_mode_for_you">PICK A MODE</string>
    <string name="pick_a_service_for_you">PICK A SERVICE FOR YOU</string>
    <string name="working_hours_and_timing">Working hours and timing</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="checkout">Checkout</string>
    <string name="Privacy_Policy">Privacy Policy</string>


    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="SendNow">Send Now</string>
    <string name="Search">Search</string>
    <string name="ReviewCmntValidation">Please insert something from your mind.</string>
    <string name="how_satisfied_are_you_with_beautyporter">How satisfied are you with Beauty Porter?</string>
    <string name="free">Free</string>
    <string name="salon_spa_clinics"><![CDATA[Salon,Spa & Clinics]]></string>
    <string name="home_service">Home Service</string>
    <string name="stylists">Stylists</string>
    <string name="price_range">Price Range</string>
    <string name="apply">APPLY</string>
    <string name="check_out_title">If you are cancel your appointment, deposit is not refundable.</string>
    <string name="promo_code">Have a Promocode ?</string>
    <string name="enter_code_here">Enter Code Here</string>
    <string name="cancelation_policy">Cancelation Policy</string>
    <string name="card_payment">CARD PAYMENT</string>
    <string name="cash_after_services">CASH AFTER SERVICES</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="discount">Discount</string>
    <string name="Qar">QAR</string>


    <string name="Server_Error">Server Error</string>
    <string name="validFirstName">Please enter name</string>
    <string name="validSecondName">Please enter name</string>
    <string name="validEmail"> Please enter valid email</string>
    <string name="validPhone">Please enter phone</string>
    <string name="validPassword">Please enter password</string>
    <string name="validPwdLength">You must have 8 characters in your password</string>
    <string name="validConfrmPwd">Please enter the confirm password</string>
    <string name="validPwdMissMatch">Password mismatch</string>
    <string name="cancel">Cancel</string>
    <string name="ad_anme">Add name</string>
    <string name="ratings">Ratings</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="pay">PAY</string>
    <string name="ok">OK</string>
    <string name="no_favourites">No favourites</string>
    <string name="copy">COPY</string>
    <string name="No_internet_connection">No internet connection</string>
    <string name="salon">SALON</string>
    <string name="spa_clinics">SALON,SPA &amp; CLINIC</string>
    <string name="home_servicec">HOME SERVICE</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="beautyporter_policy">BeautyPorter policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="refund_policy">Refund policy</string>

</resources>
