<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context=".Activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/createSmall"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/new_account"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/curved_border_black_transparent_color"
                    android:drawableLeft="@mipmap/user"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/sourcesansprolight"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/curved_border_black_transparent_color"
                    android:drawableLeft="@mipmap/user"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/sourcesansprolight"
                    android:gravity="center"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/curved_border_black_transparent_color"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="+974" />
                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/colorBlack"/>

                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:fontFamily="@font/sourcesansprolight"
                        android:gravity="center"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="8"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorHint"
                        android:textSize="14dp" />

                </LinearLayout>


                <EditText
                    android:id="@+id/edtPwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/curved_border_black_transparent_color"
                    android:drawableLeft="@mipmap/pass"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/sourcesansprolight"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/curved_border_black_transparent_color"
                    android:drawableLeft="@mipmap/email"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/sourcesansprolight"
                    android:gravity="center"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_black_color"
                    android:fontFamily="@font/sourcesansprolight"
                    android:padding="12dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite" />


                <LinearLayout
                    android:id="@+id/linearSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sourcesansprolight"
                        android:text="@string/already_have_an_account" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:gravity="center"
                        android:text="@string/loginsmall"
                        android:textColor="@color/colorBlack"
                        android:textSize="12dp" />


                </LinearLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@mipmap/location_back" />
    </LinearLayout>


</FrameLayout>