<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSideMemu"
    android:orientation="vertical"
    android:layout_marginLeft="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginEnd="4dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/nav_head_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image_header"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/logo"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/txt_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_account"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClick"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/todays_offer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todays_offer"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearFeedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="22dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClick"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearAboutUS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClick"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/about_us"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="22dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClick"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/setting"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="22dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClick"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/vendor_sidemenu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_as_vendor"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="22dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClick"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/logout"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>







    </LinearLayout>


</LinearLayout>