<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.OffersFragment">

    <LinearLayout
        android:id="@+id/lineaerMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardUpComing"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorWhite"
                android:background="@drawable/rectangle_gray_curved"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14dp"
                android:padding="10dp"
                android:text="@string/upcoming" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardPast"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="8dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardUseCompatPadding="true"
                android:background="@drawable/rectangle_gray_curved"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="14dp"
                android:text="@string/past" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <include layout="@layout/recyclerview_layout"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lineaerNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/colorBlack" />
    </LinearLayout>



</FrameLayout>